--- a/music_school_edu/views/music_school_menuitems.xml
+++ b/music_school_edu/views/music_school_menuitems.xml
@@ -8,5 +8,6 @@
         <menuitem id="music_school_course_menu" name="Course" action="music_school_course_action" sequence="40"/>
         <menuitem id="music_school_class_menu" name="Class" action="music_school_classroom_action" sequence="50"/>
         <menuitem id="music_school_lesson_menu" name="Lesson" action="music_school_lesson_action" sequence="60"/>
+        <menuitem id="music_school_lesson_attendance_menu" name="Attendance" action="music_school_lesson_attendance_action" sequence="70"/>
     </menuitem>
 </odoo>
