--- a/music_school_angel/views/music_school_instrument_views.xml
+++ b/music_school_angel/views/music_school_instrument_views.xml
@@ -22,6 +22,7 @@
             <field name="family_id" optional="show"/>
                 <!-- <field name="family" optional="show"/> -->          
             <field name="description" optional="hide"/>
+            <field name="is_repaired" widget="boolean_toggle" optional="show"/>
             <field name="last_maintenance"/>
         </list>
     </field>
@@ -49,6 +50,7 @@
                     </group>
                     <group>
                         <field name="last_maintenance"/>
+                        <field name="is_repaired" widget="boolean_toggle"/>
                     </group>                        
                 </group>
                 <notebook>
