--- a/music_school_angel/views/music_school_student_views.xml
+++ b/music_school_angel/views/music_school_student_views.xml
@@ -46,6 +46,7 @@
                 </div>
                 <group>
                     <group>
+                        <field name="partner_id"></field>
                         <field name="reference" readonly="1"/>
                         <field name="email"/>
                         <field name="phone"/>
