--- a/music_school_angel/views/music_school_course_views.xml
+++ b/music_school_angel/views/music_school_course_views.xml
@@ -53,7 +53,7 @@
                 </div>
                 <group>
                     <group>
-                        <field name="professor_id" domain="[('level', '=', level)]"/>
+                        <field name="professor_id" options="{'no_create':1,'no_quick_create':1,'no_open':1}" domain="[('level', '=', level)]"/>
                         <field name="instrument_id"/>
                         <field name="level"/>
                     </group>
