--- a/music_school_angel/views/music_school_menuitems.xml
+++ b/music_school_angel/views/music_school_menuitems.xml
@@ -48,4 +48,11 @@
         parent="music_school_menu"
         sequence="10"/>
 
+    <menuitem
+        id="music_school_lesson_attendance_menu"
+        name="Lessons"
+        action="music_school_lesson_attendance_action"
+        parent="music_school_menu"
+        sequence="10"/>
+
 </odoo>
