--- a/music_school_angel/views/music_school_menuitems.xml
+++ b/music_school_angel/views/music_school_menuitems.xml
@@ -50,8 +50,15 @@
 
     <menuitem
         id="music_school_lesson_attendance_menu"
-        name="Lessons"
+        name="Attendandes"
         action="music_school_lesson_attendance_action"
+        parent="music_school_menu"
+        sequence="10"/>
+
+    <menuitem
+        id="music_school_lesson_exam_menu"
+        name="Exams"
+        action="music_school_exam_action"
         parent="music_school_menu"
         sequence="10"/>
 
