--- a/music_school_nacho/views/music_school_exam_views.xml
+++ b/music_school_nacho/views/music_school_exam_views.xml
@@ -52,6 +52,10 @@
                     <button string="Assign students" name="assign_students" type="object" class="oe_highlight"/>
                 </header>
                 <sheet>
+                <widget name="web_ribbon" title="Finished"
+                 bg_color="text-bg-info"
+                 invisible="state != 'finished'"/>
+                       
                 <div class="oe_title">
                     <h1>
                         <field name="name" placeholder="E.g Flute exam" class="oe_inline"/>
