--- a/music_school_edu/views/music_school_course_view.xml
+++ b/music_school_edu/views/music_school_course_view.xml
@@ -42,6 +42,11 @@
                 <button string="Import Students" name="assign_student" type="object" class="oe_highlight"/>
             </header>
                 <sheet>
+                    <div class="oe_button_box" name="button_box">
+                        <button name="action_view_lesson" type="object" class="oe_stat_button" icon="fa-calendar">
+                            <field name="lesson_count" string="Lessons" widget="statinfo"/>
+                        </button>
+                    </div>
                     <div class="oe_title">
                         <h1>
                             <field name="name" placeholder="Course Name"/>
