[ADD] wizards, company, adv fields

--- a/music_school_nacho/views/music_school_lesson_attendance_views.xml
+++ b/music_school_nacho/views/music_school_lesson_attendance_views.xml
@@ -33,6 +33,7 @@
         <field name="priority" eval="99"/>
         <field name="arch" type="xml">
             <list string="Attendance" editable="bottom">
+                <field name="sequence" widget="handle"/>
                 <field name="student_id"/>
                 <field name="lesson_id"/>
                 <field name="is_present" widget="boolean_toggle"/>
