--- a/music_school_nacho/views/music_school_course_views.xml
+++ b/music_school_nacho/views/music_school_course_views.xml
@@ -41,7 +41,7 @@
                     <button string="Action Draft" invisible="state in ('draft')" name="action_draft" type="object" class="btn-secondary"/>
                     <button string="Action in Progress" invisible="state in ('progress')" name="action_progress" type="object" class="btn-success"/>
                     <button string="Action finish" invisible="state in ('finished')" name="action_finish" type="object" class="btn-primary"/>
-                    <button string="Create Lesson" name="create_lesson" type="object" class="btn-primary"/>
+                    <button string="Create Lesson" groups="music_school_nacho.group_music_school_manager" name="create_lesson" type="object" class="btn-primary"/>
                     <button string="Assign students" groups="music_school_nacho.group_music_school_manager" name="assign_students" type="object" class="btn-secondary"/>
                     <field name="state" widget="statusbar"/>
                 </header>
@@ -64,6 +64,7 @@
                             <field name="teacher_id" options="{'no_create':1,'no_quick_create':1,'no_open':1}" domain="[('level','=',level)]"/>
                             <field name="instrument_id"/>
                             <field name="level"/>
+                            <field name="company_id"/>
                         </group>
 
                         <group>
