[add] menu translation

--- a/music_school_nacho/views/music_school_exam_views.xml
+++ b/music_school_nacho/views/music_school_exam_views.xml
@@ -49,7 +49,7 @@
             <form string="Exam">
                 <header>
                     <field name="state" widget="statusbar"/>
-                    <button string="Assign students" name="assign_students" type="object" class="oe_highlight"/>
+                    <button string="Assign students" groups="music_school_nacho.group_music_school_manager" name="assign_students" type="object" class="oe_highlight"/>
                 </header>
                 <sheet>
                 <widget name="web_ribbon" title="Finished"
