--- a/music_school_angel/views/music_school_course_views.xml
+++ b/music_school_angel/views/music_school_course_views.xml
@@ -46,6 +46,15 @@
                 <field name="state" options="{'clickable':1}" widget="statusbar"/>
             </header>
             <sheet>
+                <div class="oe_button_box" name="button_box">
+                    <button name="action_view_exams" type="object" class="oe_stat_button" icon="fa-bookmark">
+                        <field name="exam_count" string="Exams" widget="statinfo"/>
+                    </button>
+                    <button name="action_view_lessons" type="object" class="oe_stat_button" icon="fa-calendar">
+                        <field name="lesson_count" string="Lessons" widget="statinfo"/>
+                    </button>
+                </div>
+
                 <div class="oe_title">
                     <h1>
                         <field name="name" placeholder="Course"/>
