--- a/music_school_angel/views/music_school_exam_views.xml
+++ b/music_school_angel/views/music_school_exam_views.xml
@@ -14,6 +14,20 @@
         </field>
     </record>
 
+    <!-- <record id="music_school_exam_self_action" model="ir.actions.act_window">
+        <field name="name">Exams</field>
+        <field name="res_model">music.school.exam</field>
+        <field name="view_mode">list,form</field>
+        <field name="domain">[('course_id', '=', active_id)]</field>
+        <field name="context">{'default_course_id': active_id}</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                Create your first exam
+            </p>
+        </field>
+    </record> -->
+
+
     <record id="music_school_exam_view_tree" model="ir.ui.view">
         <field name="name">music.school.exam.view.tree</field>
         <field name="model">music.school.exam</field>
@@ -39,6 +53,11 @@
                     <button string="Assign students" name="assign_students" type="object" class="oe_highlight"/>
                 </header>
                 <sheet>
+                
+                <widget name="web_ribbon" title="Finished"
+                 bg_color="text-bg-info"
+                 invisible="state != 'finished'"/>
+
                 <div class="oe_title">
                     <h1>
                         <field name="name" placeholder="E.g Flute exam" class="oe_inline"/>
