--- a/music_school_edu/report/music_school_course_report_simple.xml
+++ b/music_school_edu/report/music_school_course_report_simple.xml
@@ -14,8 +14,8 @@
                         </thead>
                         <tbody>
                             <tr t-foreach="docs" t-as="course">
-                                <td t-field="course.name"/>
-                                <td t-field="course.start_date"/>
+                                <td><span t-field="course.name"/></td>
+                                <td><span t-field="course.start_date"/></td>
                             </tr>
                         </tbody>
                     </table>
@@ -24,21 +24,21 @@
         </t>
     </template>
 
-    <record id="paperformat_music_school" model="report.paperformat">
-        <field name="name">Music School Paperformat</field>
+    <!-- <record id="paperformat_music_school_simple" model="report.paperformat">
+        <field name="name">Music School Paperformat Simple</field>
         <field name="default" eval="True"/>
         <field name="format">custom</field>
-        <field name="page_height">80</field>
-        <field name="page_width">175</field>
+        <field name="page_height">297</field>
+        <field name="page_width">210</field>
         <field name="orientation">Portrait</field>
-        <field name="margin_top">3</field>
-        <field name="margin_bottom">3</field>
-        <field name="margin_left">3</field>
-        <field name="margin_right">3</field>
+        <field name="margin_top">10</field>
+        <field name="margin_bottom">10</field>
+        <field name="margin_left">10</field>
+        <field name="margin_right">10</field>
         <field name="header_line" eval="False"/>
         <field name="header_spacing">3</field>
         <field name="dpi">80</field>
-    </record>
+    </record> -->
     
     <record id="action_report_music_school_course_simple" model="ir.actions.report">
         <field name="name">Simple Course Report</field>
@@ -47,8 +47,9 @@
         <field name="report_name">music_school_edu.report_music_school_course_simple</field>
         <field name="report_file">music_school_edu.report_music_school_course_simple</field>
         <field name="print_report_name">'Simple_Course_Report.pdf'</field>
-        <field name="paperformat_id" ref="paperformat_music_school"/>
+        <!-- <field name="paperformat_id" ref="paperformat_music_school_simple"/> -->
         <field name="binding_model_id" ref="model_music_school_course"/>
         <field name="binding_type">report</field>
     </record>
+
 </odoo>
