--- a/music_school_nacho/views/music_school_student_views.xml
+++ b/music_school_nacho/views/music_school_student_views.xml
@@ -36,6 +36,11 @@
             <button string="Generate reference" name="generate_reference" type="object" class="btn-primary"/>
             </header>
             <sheet>
+                <div class="oe_button_box" name="button_box">
+                    <button name="action_view_attendances" type="object" class="oe_stat_button" icon="fa-calendar">
+                        <field name="attendances_count" string="Attendances" widget="statinfo"/>
+                    </button>
+                </div>
                 <div class="oe_title">
                     <h1>
                         <field name="name" placeholder="Student"/>
