--- a/music_school_nacho/views/music_school_course_views.xml
+++ b/music_school_nacho/views/music_school_course_views.xml
@@ -43,6 +43,8 @@
                     <button string="Action finish" invisible="state in ('finished')" name="action_finish" type="object" class="btn-primary"/>
                     <button string="Create Lesson" groups="music_school_nacho.group_music_school_manager" name="create_lesson" type="object" class="btn-primary"/>
                     <button string="Assign students" groups="music_school_nacho.group_music_school_manager" name="assign_students" type="object" class="btn-secondary"/>
+                    <button string="Print report" name="action_print_report" context="{'button1': True}" type="object" class="oe_highlight"/>
+                    <button string="Print report 2" name="action_print_report" context="{'button2': True}" type="object" class="oe_highlight"/>
                     <field name="state" widget="statusbar"/>
                 </header>
                 <sheet>
