--- a/music_school_nacho/views/music_school_teacher_views.xml
+++ b/music_school_nacho/views/music_school_teacher_views.xml
@@ -33,6 +33,11 @@
         <field name="arch" type="xml">
             <form string="Teacher">
                 <sheet>
+                <div class="oe_button_box" name="button_box">
+                    <button invisible="course_count == 0" name="action_view_courses" type="object" class="oe_stat_button" icon="fa-book">
+                        <field name="course_count" string="Courses" widget="statinfo"/>
+                    </button>
+                </div>
                 <div class="oe_title">
                     <h1>
                         <field name="name" placeholder="Teacher"/>
