--- a/music_school_angel/views/music_school_lesson_attendance_views.xml
+++ b/music_school_angel/views/music_school_lesson_attendance_views.xml
@@ -18,6 +18,7 @@
         <field name="model">music.school.lesson.attendance</field>
         <field name="arch" type="xml">
             <list string="Attendance">
+                <field name="sequence" widget="handle"/>
                 <field name="student_id"/>
                 <field name="lesson_id"/>
                 <field name="is_present"/>
