--- a/music_school_angel/views/music_school_professor_views.xml
+++ b/music_school_angel/views/music_school_professor_views.xml
@@ -37,6 +37,12 @@
                 <!--button string="Generate reference" name="generate_reference" type="object" class="oe_highlight"/-->
             </header>
             <sheet>
+                <div class="oe_button_box" name="button_box">
+                    <button invisible="course_count == 0" name="action_view_courses" type="object" class="oe_stat_button" icon="fa-book">
+                        <field name="course_count" string="Courses" widget="statinfo"/>
+                    </button>
+                </div>
+
                 <div class="oe_title">
                     <h1>
                         <field name="name" placeholder="Professor"/>
