[ADD] tests, mixins

--- a/music_school_nacho/views/music_school_course_views.xml
+++ b/music_school_nacho/views/music_school_course_views.xml
@@ -6,7 +6,7 @@
         <field name="res_model">music.school.course</field>
         <field name="view_mode">kanban,list,pivot,graph,calendar,form</field>
         <field name="domain">[]</field>
-        <field name="context">{}</field>
+        <field name="context">{'search_default_create_by_me': 1}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
             Create your first course
@@ -68,6 +68,7 @@
                             <field name="instrument_id"/>
                             <field name="level"/>
                             <field name="company_id"/>
+                            <field name="create_uid"/>
                         </group>
 
                         <group>
@@ -86,6 +87,12 @@
                         </page>
                     </notebook>
                 </sheet>
+                <!-- <div class="oe_chatter">
+                    <field name="message_follower_ids" widget="mail_followers"/>
+                    <field name="activity_ids" widget="mail_activity"/>
+                    <field name="message_ids" widget="mail_thread"/>
+                </div> -->
+                <chatter/>
             </form>
         </field>
     </record>
@@ -98,6 +105,7 @@
                 <field name="name" filter_domain="['|',('instrument_id', 'ilike', self),('name','ilike',self)]"/>
                 <field name="teacher_id"/>
                 <field name="instrument_id"/>
+                <filter name="create_by_me" string="Created by me" domain="[('create_uid', '=', uid)]" />
                 <filter string="Draft" name="draft" domain="[('state', '=', 'draft')]"/>
                 <filter string="In Progress" name="progress" domain="[('state', '=', 'progress')]"/>
                 <filter string="Teacher" name="group_by_teacher" context="{'group_by': 'teacher_id'}" />
