--- a/music_school_edu/views/music_school_lesson_view.xml
+++ b/music_school_edu/views/music_school_lesson_view.xml
@@ -60,6 +60,7 @@
                         </page>
                     </notebook>
                 </sheet>
+                <chatter/>
             </form>
         </field>
     </record>
