--- a/music_school_edu/views/music_school_teacher_view.xml
+++ b/music_school_edu/views/music_school_teacher_view.xml
@@ -29,7 +29,7 @@
             <form string="">
                 <sheet>
                     <div class="oe_button_box" name="button_box">
-                        <button name="action_view_courses" type="object" class="oe_stat_button" icon="fa-book">
+                        <button invisible="course_count == 0" name="action_view_courses" type="object" class="oe_stat_button" icon="fa-book">
                             <field name="course_count" string="Courses" widget="statinfo"/>
                         </button>
                     </div>
