--- a/music_school_angel/views/music_school_course_views.xml
+++ b/music_school_angel/views/music_school_course_views.xml
@@ -41,6 +41,7 @@
                 <button string="Action Draft" invisible="state in ('draft')" name="action_draft" type="object" class="btn-secondary"/>
                 <button string="Action In Progress" invisible="state in ('progress')" name="action_progress" type="object" class="btn-sucess"/>
                 <button string="Action Finish" invisible="state in ('finished')" name="action_finish" type="object" class="btn-primary"/>
+                <button string="Action cancel" invisible="state in ('cancelled')" name="action_cancel" type="object" class="btn-danger"/>
                 <button string="Create Lesson" name="create_lesson" type="object" class="btn-primary"/>
                 <button string="Assign students" groups="music_school_angel.group_music_school_manager" name="assign_students" type="object" class="btn-secondary"/>
                 <button string="Print report" name="action_print_report" context="{'button1': True}" type="object" class="oe_highlight"/>
